--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mealstogo_practice",
+  "name": "mealstogo",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
     "expo": "~48.0.11",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-paper": "^5.6.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-svg": "13.4.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
