--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "camelize": "^1.0.1",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "logger": "^0.0.1",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.71.6",
     "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.11",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.1.8",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
