--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/oswald": "^0.2.3",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "camelize": "^1.0.1",
     "expo": "~48.0.11",
     "expo-font": "~11.1.1",
